# uuidt

./: Cargo.toml  README.md  main.py  pyimpl.py  pyproject.toml
.github/workflows/: uuidt.yml
src/: lib.rs
