[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "uuidt"
version = "0.1.0"
description = "Timestamp-orderable UUIDs for Python, written in Rust."
authors = [{ name = "Isaac Harris-Holt", email = "isaac@harris-holt.com" }]
maintainers = [{ name = "Isaac Harris-Holt", email = "isaac@harris-holt.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
urls = { repository = "https://github.com/isaacharrisholt/uuidt" }


[tool.maturin]
features = ["pyo3/extension-module"]
